Added lazy loading routing mechanism

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
 ﻿Its dashboard........
+<a routerLink="/dashboard/home">Home</a>
+<a routerLink="/dashboard/contact-list">Contact-List</a>
 <router-outlet></router-outlet>
